change image url
change image url

--- a/英文版宣传稿子.md
+++ b/英文版宣传稿子.md
@@ -25,7 +25,7 @@ platform and the PL side resources of the ZU3 are shown in the figure below.
 | BRAM               | 216  |
 | DSP                | 360  |
 
-![ultra96-front-sd.png](media/866d660bb71900113a37b707d3d04cd5.png)
+![ultra96board](https://github.com/jackzhaobo/Test_read_me/blob/master/fig1_ultra96-front-sd.png)
 
 1.  Ultra96 Board (b) ZU3 Resource
 
@@ -92,7 +92,7 @@ algorithm needs to classify these 12 types of objects during design;
 box is assigned a fixed target. That is, an appropriate over-fitting is required
 for training.
 
-![](media/8ad9a1d8805a52ff69a0fe1217a62797.png)
+![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig2_data_set.png)
 
 Figure 2 Part of the picture of the training set
 
@@ -104,9 +104,9 @@ extraction network with the lightweight ShuffleNet V2 with a parameter size
 slightly larger than 1X. As shown in the figure below, we have customized our
 single target detection network, ShuffleDet.
 
-![](media/28ec049fecac07e1a7bf112720292aeb.png)
+![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig3_net_structure.png)
 
-图 1 ShuffleDet的网络结构示意图
+Figure 3 ShuffleDet Structure
 
 ### 2.3 Training and quantification of neural networks
 
@@ -128,7 +128,7 @@ quantization process is mainly divided into the following steps:
 serious. Therefore, after quantification, you need to fine tune the parameters.
 A schematic diagram of the quantization operation is shown in the figure below.
 
-![](media/977cb61bc8c86025ce9a8df276a335f7.png)
+![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig4_quan.png)
 
 Figure 4 Quantification process of network parameters
 
@@ -149,7 +149,7 @@ characteristics. The HiPU operates at 233MHz and its peak power is 268Gops. With
 C/RISC-V assembly as the programming interface, the convolution efficiency
 averages over 80%.
 
-![](media/155e6b863a4fbf45df5d873c94014a3c.png)
+![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig5_HiPU.png)
 
 Figure 5 HiPU structure block diagram and characteristics
 
@@ -193,7 +193,7 @@ the DDR at the input of each bottleneck. After all the layers are calculated in
 turn, the output feature map is written back to DDR. All rows are calculated in
 turn. The following figure shows the order of cascading calculation of Module C.
 
-![](media/b296e70f19fa58933d059310660caeda.png)
+![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig6_module.png)
 
 Figure 6 Module-C uses inter-layer cascade calculation
 
@@ -207,7 +207,7 @@ the input image is expanded from 3 to 9. Eventually, the processing efficiency
 of the first layer was increased from 0.38 to 0.56, and the conversion diagram
 is shown in the figure below.
 
-![](media/fa177f8f51be2f761af86738c0337f5f.png)
+![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig7_channel_reoder.png)
 
 Figure 7 Conversion of the input image in the row direction
 
@@ -223,11 +223,11 @@ processing, thereby increasing the overall detection frame rate from 30.3 Hz to
 The figure below shows a schematic diagram of parallelization of image decoding
 and convolutional neural networks.
 
-![](media/46c19d70f32f06219787a1d9aa030f98.png)
+![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig8_a_serial.png)
 
 (a) Workflow before parallelization
 
-![](media/0a4ed2138b4193f428d4fdc14f516274.png)
+![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig8_b_para.png)
 
 >   (b) Workflow after parallelization
 
