--- a/英文版宣传稿子.md
+++ b/英文版宣传稿子.md
@@ -24,10 +24,11 @@ platform and the PL side resources of the ZU3 are shown in the figure below.
 | FF                 | 141K |
 | BRAM               | 216  |
 | DSP                | 360  |
+ > (a)ZU3 Resource
 
 ![ultra96board](https://github.com/jackzhaobo/Test_read_me/blob/master/fig1_ultra96-front-sd.png)
 
-1.  Ultra96 Board (b) ZU3 Resource
+  > (b)Ulra96 Board
 
 Figure 1 Introduction to the FPGA development environment provided by Xilinx
 
