--- a/英文版宣传稿子.md
+++ b/英文版宣传稿子.md
@@ -24,12 +24,14 @@ platform and the PL side resources of the ZU3 are shown in the figure below.
 | FF                 | 141K |
 | BRAM               | 216  |
 | DSP                | 360  |
+  
   ZU3 Resource
 
 ![ultra96board](https://github.com/jackzhaobo/Test_read_me/blob/master/fig1_ultra96-front-sd.png)
+
 Figure 1 Introduction to the FPGA development environment provided by Xilinx
 
-Motivation
+1.Motivation
 ----------
 
 In order to achieve a balance between detection accuracy and energy consumption,
@@ -58,16 +60,16 @@ extra time;
 
 3) Provide C, RISC-V assembly interface API, flexible scheduling;
 
->   4) HiPU is completely implemented by the PL side and does not depend on the
->   PS side. The main PS workload is image preprocessing and result output.
+4) HiPU is completely implemented by the PL side and does not depend on the
+PS side. The main PS workload is image preprocessing and result output.
 
 After the above optimization, the design of our team measured the following
 results on the dataset of the competition side: the accuracy rate IoU was 61.5%;
 the energy consumption was 9537J, the frame rate was 50.91 Hz, and the power was
 9.248W.
 
-2. Algorithm framework design
------------------------------
+2.Algorithm framework design
+----------------------------
 
 ### 2.1 Task Analysis
 
@@ -133,7 +135,7 @@ Figure 4 Quantification process of network parameters
 After quantification, the ShuffleDet network we used has a convolutional layer
 of about 74 layers, a weight of about 1.94MB, and a Bias of about 78KB.
 
-3. Computing architecture framework design
+3.Computing architecture framework design
 ------------------------------------------
 
 ###  3.1 HiPU overall introduction
@@ -261,7 +263,7 @@ shorter than the image solving time, the HiPU will waste energy by "running
 empty". In addition, in order to seize the DDR bandwidth, you need to continue
 to optimize.
 
-4. Analysis of competition results
+4.Analysis of competition results
 ----------------------------------
 
 The following table shows the results of the DAC19 competition. A total of 58
