chagne some error

--- a/英文版宣传稿子.md
+++ b/英文版宣传稿子.md
@@ -210,7 +210,7 @@ is shown in the figure below.
 ![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig7_channel_reoder.png)
 
 Figure 7 Conversion of the input image in the row direction
-
+###  3.3 System optimization design
 1) Image decoding and convolutional neural network computing parallelization
 
 Since HiPU only relies on the resources of the PL side of Zynq for design, the
@@ -229,9 +229,9 @@ and convolutional neural networks.
 
 ![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig8_b_para.png)
 
->   (b) Workflow after parallelization
+(b) Workflow after parallelization
 
->   2) Use C code to speed up the original Python code on the PS side
+2) Use C code to speed up the original Python code on the PS side
 
 Reconstructing the PS side with C code is a time consuming operation, and uses
 the ctypes interface to call the reconstructed C code in the Pynq framework: 1)
@@ -240,7 +240,7 @@ PL side data; 2) Find the largest Confidence and the coordinates of the
 corresponding BBox , and then calculate the absolute coordinates based on the
 relative coordinates;
 
->   3) Use the gated clock to reduce the energy consumption on the PL side
+3) Use the gated clock to reduce the energy consumption on the PL side
 
 In order to reduce the energy consumption of the system, a gated clock strategy
 is designed. When the HiPU calculates a picture, it automatically turns off the
