--- a/英文版宣传稿子.md
+++ b/英文版宣传稿子.md
@@ -1,22 +1,32 @@
-XJTU-Tripler team design analysis in DAC19 Conference System Design Competition (SDC)
+XJTU-Tripler design in DAC19 Conference System Design Competition (SDC)
 -------------------------------------------------------------------------------------
+The 2nd place winner's source codes for DAC 2019 System Design Contest, FPGA Track. Designed by
+>XJTU-Tripler Group, Institute of Artificial Intelligence and Robots, Xi’an Jiaotong University 
 
-The Design Automation Conference is one of the world's most prestigious
-industry-university-research exchanges and one of the CCF-A Class. The 56th DAC
-Conference in 2019 was held in Las Vegas. Among them, the System Design Contest
-(SDC) task is to perform fast target detection for Edge-side devices. The
-competition was sponsored by Xilinx, DJI and Nvidia. The game is trained on the
-training data set (90,000 images with a resolution of 360x640, single target),
-and tested on 50,000 test data images. The accuracy IoU (Intersection over
-Union) high and the energy consumption low is the winner.
+>Boran Zhao, Wenzhe Zhao, Tian Xia, Fei Chen, Long Fan, Pengchen Zong, 
+Algorithm design and quantification: Yadong Wei, Zhijun Tu, Zhixu Zhao, Zhiwei Dong, 
+and Pengju Ren*
 
-The competition offers two tracks for the NVIDIA TX2 and Xilinx Ultra96 design
-platforms. Our team participated in the FPGA track and developed on the official
-Ultra96 platform equipped with Xilinx UltraScale+ ZU3. The Ultra96 is an
-excellent Xilinx ZYNQ development board designed for low-power IoT environments.
-The PS side is equipped with a quad-core ARM Cortex-A53 CPU running at 1.5GHz;
-the software can be developed using the Python-based PYNQ framework. The Ultra96
-platform and the PL side resources of the ZU3 are shown in the figure below.
+>pengjuren@xjtu.edu.cn
+
+>2019-06-21
+
+
+
+The Design Automation Conference, is one of the world's most prestigious
+conference in EDA. The 56th DAC Conference was held in Las Vegas. Among them, the 
+System Design Contest (SDC) aim at fast target detection for Edge-side 
+devices. The competition was sponsored by Xilinx, DJI and Nvidia. The single target
+training data set include 90,000 images with resolution of 360x640,and the system 
+test on 50,000 images. The accuracy IoU (Intersection over Union) higher and the 
+energy consumption lower is the winner.
+
+A team can choose the NVIDIA TX2 or Xilinx Ultra96 as design platforms. Our team 
+participated in the FPGA devcie. The Ultra96 is an excellent ZYNQ development 
+board designed for low-power IoT environments.The Ultra96's PS side is equipped 
+with a quad-core ARM Cortex-A53 CPU running at 1.5GHz;the software can be developed 
+using the Python-based PYNQ framework. The Ultra96 board and the PL side resources
+are shown in the figure below.
 
 | PL resource of ZU3 |      |
 |--------------------|------|
@@ -35,37 +45,35 @@ Figure 1 Introduction to the FPGA development environment provided by Xilinx
 ----------
 
 In order to achieve a balance between detection accuracy and energy consumption,
-our team selected and optimized the lightweight neural network framework for the
+our team selected and optimized a lightweight neural network framework for the
 edge side. And for the resource limitation of ZU3, we simplified a DNN
-accelerator (HiPU) designed by our team to support the general network and
-deployed it on the PL side of ZU3. The main work is divided into two parts:
-algorithm optimization and architecture design optimization for hardware
-platforms:
+accelerator (HiPU) designed to support the general network anddeployed it on 
+the PL. The main work have two parts:
+on the one hand, algorithm optimization, on the other hand, hardware architecture-HiPU:
 
-**The optimization of the algorithm mainly includes:**
+**The algorithm optimization mainly includes:**
 
 1) Select ShuffleNet V2 as the main frame for feature extraction;
 
-2) Select YOLO as the regression framework for the single target location;
+2) Select YOLO as the regression framework for the single target detection;
 
 3) Perform 8-bit quantization on the neural network.
 
-**The optimization of HiPU mainly includes:**
+**The HiPU design feature:**
 
-1) Support CONV, FC, Dep-wise CONV, Pooling, Ele-wise Add/Mul, etc., peak power
-is 268 Gops, efficiency is greater than 80%;
+1) Support CONV, FC, Dep-wise CONV, Pooling, Ele-wise Add/Mul, etc.the peak power 
+is 268Gops, the efficiency is greater than 80%;
 
 2) Supports Channel shuffle, divide, and concat operations without consuming
 extra time;
 
-3) Provide C, RISC-V assembly interface API, flexible scheduling;
+3) Provide C, RISC-V assembly interface API;
 
-4) HiPU is completely implemented by the PL side and does not depend on the
-PS side. The main PS workload is image preprocessing and result output.
+4) The HiPU is completely implemented in PL and does not depend on the
+PS. The main PS workload is image reading and result output.
 
-After the above optimization, the design of our team measured the following
-results on the dataset of the competition side: the accuracy rate IoU was 61.5%;
-the energy consumption was 9537J, the frame rate was 50.91 Hz, and the power was
+the performance on the dataset of the testing set: the accuracy rate IoU is 61.5%;
+the energy consumption was 9537J, the image process speed was 50.91 Hz, and the power was
 9.248W.
 
 2.Algorithm framework design
@@ -73,24 +81,22 @@ the energy consumption was 9537J, the frame rate was 50.91 Hz, and the power was
 
 ### 2.1 Task Analysis
 
-The training set for this competition is provided by DJI, and some of the
-pictures are shown below. Before determining the algorithm, our team first
-analyzed the characteristics of the training data set:
+The dataset is provided by DJI, and some of the pictures are shown below. 
+Before determining the algorithm, our team first analyzed the 
+characteristics of the training data set:
 
-1) The image size is 360x640, no need to resize the image for normalization;
+1) The image size is 360x640, no need to resize for the following process;
 
-2) All test pictures are from the UAV perspective. The size of the calibration
-frame varies from 36 pixels to 7200 pixels, and the algorithm needs to support
-target detection of various sizes;
+2) All test pictures are from the UAV perspective. The size of the BBOX size
+varies from 36 pixels to 7200 pixels, and the algorithm needs to support
+difference shape BBox;
 
-3) All pictures in 12 categories (95 sub-categories), including boat (7),
+3) All pictures are in 12 categories (95 sub-categories), including boat (7),
 building (3), car (24), drone (4), group (2), horse-ride(1), paraglider(1) ),
-person (29), riding (17), truck (2), wakeboard (4), whale (1) category. The
-algorithm needs to classify these 12 types of objects during design;
+person (29), riding (17), truck (2), wakeboard (4), whale (1) category. 
 
-4) Even if multiple similar targets appear in the test image, the calibration
-box is assigned a fixed target. That is, an appropriate over-fitting is required
-for training.
+4) Even if multiple similar targets appear in one test image, the BBox must 
+assigned a fixed target. That is, an appropriate over-fitting is required for training.
 
 ![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig2_data_set.png)
 
@@ -98,11 +104,10 @@ Figure 2 Part of the picture of the training set
 
 ### 2.2 Single target detection network selection
 
-In order to meet the real-time detection of the mobile terminal, our team
+In order to meet the real-time detection on the mobile device, our team
 finally selected YOLO as the basic detection algorithm. Replace the feature
-extraction network with the lightweight ShuffleNet V2 with a parameter size
-slightly larger than 1X. As shown in the figure below, we have customized our
-single target detection network, ShuffleDet.
+extraction network with the lightweight ShuffleNet V2. As shown in the figure below, 
+we have customized our single target detection network,called ShuffleDet.
 
 ![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig3_net_structure.png)
 
@@ -112,13 +117,13 @@ Figure 3 ShuffleDet Structure
 
 Our team first pre-trained a standard ShuffleNet V2 classification network on
 the ImageNet dataset. After the model converges, the parameters of the feature
-extraction part are migrated to the ShuffleDet network. Use the training set of
-the competitor to train the parameters of other layers.
+extraction part are migrated to the ShuffleDet network. Use the DAC training set
+to train the parameters of other layers.
 
-In order to adapt to the fixed-point operation of the FPGA, after the whole
+In order to adapt to the fixed-point operation on FPGA, after the whole
 parameter training is completed, all parameters need to be quantized. Our team
-quantified both network parameters and feature maps to 8bit fixed points. The
-quantization process is mainly divided into the following steps:
+quantified both network parameters and feature maps to 8bit. The quantization process 
+is mainly divided into the following steps:
 
 1) merging the BN layer into the parameters;
 
@@ -135,12 +140,12 @@ Figure 4 Quantification process of network parameters
 After quantification, the ShuffleDet network we used has a convolutional layer
 of about 74 layers, a weight of about 1.94MB, and a Bias of about 78KB.
 
-3.Computing architecture framework design
+3.hardware architecture-HiPU
 ------------------------------------------
 
-###  3.1 HiPU overall introduction
+###  3.1 HiPU introduction
 
-Since the HiPU designed by our team is mainly for the application specific
+Since the HiPU designed is mainly for the application specific
 integrated circuit (AISC), the design implementation on the FPGA is mainly to
 verify the function. Therefore, for the computing platform provided by the game,
 we need to make appropriate tailoring needs to adapt to the resources of ZU3.
@@ -164,7 +169,7 @@ be merged on the hardware without consuming additional time.
 HiPU can work on any kind of Xilinx FPGA and is not limited by the Zynq
 architecture.
 
-The HiPU layer implements matrix operations, vector operations, and scalar
+The HiPU support matrix operations, vector operations, and scalar
 operations. Any type of parallel computing can be supported in the case of
 scheduling. In the future, optimization of sparse matrix operations will be
 implemented to support efficient DeCONV operations and feature map sparse
@@ -176,7 +181,7 @@ optimization.
 
 HiPU design performance has two important aspects: one is the utilization of the
 MAC unit; the other is whether the data transmission network can match the data
-required by the MAC. Most of the limitations of the data transmission network
+required. Most of the limitations of the data transmission network
 come from the DDR interface. This design is specifically optimized for the DDR
 interface.
 
@@ -188,10 +193,10 @@ of each layer needs a DDR access, the bandwidth requirement for DDR is very
 large, and it consumes additional power consumption.
 
 Our team reduces the bandwidth requirements of DDR by cascading between layers.
-Using ShuffleNet's bottleneck as a boundary, a row of feature maps is read from
+Using ShuffleNet's bottleneck as a unit, some row of feature maps is read from
 the DDR at the input of each bottleneck. After all the layers are calculated in
-turn, the output feature map is written back to DDR. All rows are calculated in
-turn. The following figure shows the order of cascading calculation of Module C.
+turn, the output feature map is written back to DDR.The following figure shows
+the order of cascading calculation of Module C.
 
 ![](https://github.com/jackzhaobo/Test_read_me/blob/master/fig6_module.png)
 
@@ -213,12 +218,11 @@ Figure 7 Conversion of the input image in the row direction
 ###  3.3 System optimization design
 1) Image decoding and convolutional neural network computing parallelization
 
-Since HiPU only relies on the resources of the PL side of Zynq for design, the
-resources on the PS side can be freed to do system IO related work. When the
-team processes the detection operation of the current picture, it pre-reads and
-decodes the next picture on the PS side to improve the parallelism of the
-processing, thereby increasing the overall detection frame rate from 30.3 Hz to
-50.9 Hz.
+Since HiPU only relies on the resources of the PL, the resources on the PS side 
+can be freed to do system IO related work. When the team processes the detection 
+operation of the current picture, it pre-reads and decodes the next picture on 
+the PS side to improve the parallelism of the processing, thereby increasing 
+the overall detection frame rate from 30.3 Hz to 50.9 Hz.
 
 The figure below shows a schematic diagram of parallelization of image decoding
 and convolutional neural networks.
@@ -233,14 +237,12 @@ and convolutional neural networks.
 
 2) Use C code to speed up the original Python code on the PS side
 
-Reconstructing the PS side with C code is a time consuming operation, and uses
-the ctypes interface to call the reconstructed C code in the Pynq framework: 1)
-Precalculate the address pointer of the confidence and BBox coordinates in the
-PL side data; 2) Find the largest Confidence and the coordinates of the
-corresponding BBox , and then calculate the absolute coordinates based on the
-relative coordinates;
+Reconstructing the PS python operation with c : 1)Precalculate the address pointer 
+of the confidence and BBox coordinates in the PL side data; 2) Find the largest 
+Confidence and the coordinates of the corresponding BBox , and then calculate 
+the absolute coordinates based on the relative coordinates;
 
-3) Use the gated clock to reduce the energy consumption on the PL side
+3) Use the gated clock to reduce the energy consumption
 
 In order to reduce the energy consumption of the system, a gated clock strategy
 is designed. When the HiPU calculates a picture, it automatically turns off the
@@ -248,7 +250,7 @@ clock, and then activates the clock when the next picture starts counting.
 Setting this strategy is based on two main reasons:
 
 First of all, the time for the system to solve the jpg format picture is not
-fixed. When the SD card model is not fixed, the average value is between
+fixed. When the SD card speed clase is not fixed, the average time is between
 7ms-12ms, and the maximum resolution time of some pictures can reach 100ms;
 
 Secondly, the system's power consumption measurement process and other overheads
@@ -260,17 +262,16 @@ increased to 200Mhz, the system The processing frame rate remains at around
 The above two reasons will cause the HiPU processing time and the picture jpeg
 solution time matching to become unfixed; when the HiPU processing image time is
 shorter than the image solving time, the HiPU will waste energy by "running
-empty". In addition, in order to seize the DDR bandwidth, you need to continue
-to optimize.
+empty".
 
 4.Analysis of competition results
 ----------------------------------
 
 The following table shows the results of the DAC19 competition. A total of 58
-teams worldwide registered for the FPGA game, but only 11 teams submitted the
+teams worldwide registered for the FPGA contest, but only 11 teams submitted the
 design (19% completion rate), compared with 52 teams on the GPU track. There are
 16 teams submitting designs (30.8% completion rate), which can also reflect the
-difficulty of FPGA game missions. In the end, our team won the second place. The
+difficulty of FPGA design. In the end, our team won the second place. The
 champion is iSmart3, which is jointly organized by UIUC, IBM and Inspirit IoT,
 and the third runner-up is SystemsETHZ from ETH Zurich. Through communication
 with other teams, our team uses the largest network of neural networks. The
@@ -301,12 +302,4 @@ Performance comparison of ShuffleDet on TX2 and Ultra96 FPGA platforms
 | TX2          | 22.04   | 0.671   | 17846.115     |
 | Ultra96      | 50.91   | 0.615   | 9537          |
 
-Summary, in the future, our design needs to continue to strengthen in the
-following aspects: First, lightweight algorithm design and training. The team
-will devote more energy to analyzing the strengths and weaknesses of each
-network structure. Second, the hardware design needs to continue iterating. The
-next version of the design will increase flexibility to support more models,
-while streamlining the logic to implement on ZU3. Higher peak power. In addition
-to continuing to enhance and optimize the design of the FPGA, we will prototype
-and streamline the chip. At the same time, the research team has deployed and
-applied the design in the actual autonomous agent.
+
