change some error

--- a/英文版宣传稿子.md
+++ b/英文版宣传稿子.md
@@ -22,7 +22,7 @@ test on 50,000 images. The accuracy IoU (Intersection over Union) higher and the
 energy consumption lower is the winner.
 
 A team can choose the NVIDIA TX2 or Xilinx Ultra96 as design platforms. Our team 
-participated in the FPGA devcie. The Ultra96 is an excellent ZYNQ development 
+participated in the FPGA track. The Ultra96 is an excellent ZYNQ development 
 board designed for low-power IoT environments.The Ultra96's PS side is equipped 
 with a quad-core ARM Cortex-A53 CPU running at 1.5GHz;the software can be developed 
 using the Python-based PYNQ framework. The Ultra96 board and the PL side resources
