highlight the tabel of result

--- a/英文版宣传稿子.md
+++ b/英文版宣传稿子.md
@@ -282,12 +282,12 @@ optimization of the algorithm is not in place. The final results are as follows:
 |-----------------------------------------|----------------|----------------|---------------|-----------------|----------|
 | **Team Name**                           | **IoU**        | **Power (mW)** | **FPS**       | **Total Score** | **Rank** |
 | iSmart3                                 | 0.716          | 7260           | 25.05         | 1.526           | 1        |
-| XJTU_Tripler                            | 0.615          | 9248           | 50.91         | 1.394           | 2        |
+| **XJTU_Tripler**                        | **0.615**      |**9248**        | **50.91**     |**1.394**        | **2**    |
 | SystemsETHZ                             | 0.553          | 6685           | 55.13         | 1.318           | 3        |
 | Comparison of resources                 |                |                |               |                 |          |
 | **Team Name**                           | **Programing** | **LUTs**       | **Flip-flop** | **BRAM**        | **DSP**  |
 | iSmart3                                 | HLS            | 83%            | 55%           | 95%             | 94%      |
-| XJTU_Tripler                            | Verilog        | 65%            | 41%           | 91%             | 98%      |
+| **XJTU_Tripler**                        | **Verilog**    | **65%**        | **41%**       | **91%**         | **98%**  |
 | SystemsETHZ                             | HLS            | 77%            | 53%           | 85%             | 73%      |
 
 The ShuffleDet algorithm we designed is also deployed on the TX2 platform. The
