change name list

--- a/英文版宣传稿子.md
+++ b/英文版宣传稿子.md
@@ -3,8 +3,7 @@ XJTU-Tripler design in DAC19 Conference System Design Competition (SDC)
 The 2nd place winner's source codes for DAC 2019 System Design Contest, FPGA Track. Designed by
 >XJTU-Tripler Group, Institute of Artificial Intelligence and Robots, Xi’an Jiaotong University 
 
->Boran Zhao, Wenzhe Zhao, Tian Xia, Fei Chen, Long Fan, Pengchen Zong, 
-Algorithm design and quantification: Yadong Wei, Zhijun Tu, Zhixu Zhao, Zhiwei Dong, 
+>Boran Zhao, Wenzhe Zhao, Tian Xia, Fei Chen, Long Fan, Pengchen Zong,Yadong Wei, Zhijun Tu, Zhixu Zhao, Zhiwei Dong, 
 and Pengju Ren*
 
 >pengjuren@xjtu.edu.cn
